<resources>
    <string name="app_name">Med Order</string>

    <!-- Product List Item !-->
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <!-- Product List Item !-->

    <!-- Activity Product Detail -->
    <string name="add_to_cart">Add to Cart</string>
    <string name="packing">Packing:</string>
    <!-- Activity Product Detail -->

    <!-- Dialog Quantity Picker -->
    <string name="select_quantity">Select quantity</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <!-- Dialog Quantity Picker -->

    <!-- Activity Cart -->
    <string name="cart">Cart</string>
    <string name="place_order">Place Order</string>
    <!-- Activity Cart -->

    <!-- Cart list Item -->
    <string name="remove">Remove</string>
    <!-- Cart list Item -->

    <!-- Activity Register -->
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <!-- Activity Register -->

    <!-- Drawer -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <!-- Drawer -->

    <!-- Menu -->
    <string name="my_orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="rst_pswd">Reset Password</string>
    <!-- Menu -->

    <!-- Activity Profile -->
    <string name="username">username</string>
    <string name="full_name">full name</string>
    <string name="ap_email">email</string>
    <string name="address">address</string>
    <string name="drug_license">drug license</string>
    <string name="gst_no">gst number</string>
    <string name="phone_no">phone number</string>
    <string name="pan_no">pan number</string>
    <string name="pswd">Enter Password</string>
    <string name="cnfrm_pswd">Confirm Password</string>
    <string name="reset">Reset</string>
    <!-- Activity Profile -->

    <!-- Shared Preference -->
    <string name="user_details_file">com.webhopers.medorder.USER_DETAIL_FILE</string>
    <string name="username_key">USERNAME_KEY</string>
    <string name="fullname_key">FULLNAME_KEY</string>
    <string name="address_key">ADDRESS_KEY</string>
    <string name="billing_address_key">BILLING_ADDRESS_KEY</string>
    <string name="email_key">EMAIL_KEY</string>
    <string name="drug_licence_key">DRUG_LICENCE_KEY</string>
    <string name="gst_no_key">GST_NO_KEY</string>
    <string name="phone_no_key">PHONE_NO_KEY</string>
    <string name="pan_no_key">PAN_NO_KEY</string>
    <!-- Shared Preference -->

    <!-- Update Profile Activity -->
    <string name="enter_username">Enter Username</string>
    <string name="update">Update</string>
    <string name="enter_phone_no">Enter Phone Number</string>
    <string name="enter_gst_no">Enter GST Number</string>
    <string name="enter_dl">Enter Drug Licence</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_zip">Enter Zip</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_pan_no">Enter PAN Number</string>

    <!-- Update Profile Activity -->

    <!--My Order Activity -->
    <string name="order_number">Order number:</string>
    <!--My Order Activity -->

    <!-- Order Detail Activity -->
    <string name="items">Items</string>
    <string name="quantity_">Quantity</string>
    <string name="tax">Tax:</string>
    <string name="amount">Amount:</string>
    <!-- Order Detail Activity -->

    <!-- Change Billing Address Activity -->
    <string name="billing_address">Billing Address</string>
    <string name="or">OR</string>
    <!-- Change Billing Address Activity -->


</resources>
