<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ar_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/MenuStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="4dp"
                android:gravity="center"
                android:textColor="#FFF"
                android:text="@string/app_name"
                android:theme="@style/TextExtraLarge"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

 <ScrollView
     android:id="@+id/ar_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@id/ar_appbar">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">

         <android.support.design.widget.TextInputLayout
             android:id="@+id/ar_first_name_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">

             <android.support.design.widget.TextInputEditText
                 android:id="@+id/ar_first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:maxLength="30"
                 android:maxLines="1"
                 android:hint="@string/first_name"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/ar_last_name_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">

             <android.support.design.widget.TextInputEditText
                 android:id="@+id/ar_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:maxLength="30"
                 android:maxLines="1"
                 android:hint="@string/last_name"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/ar_email_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">

             <android.support.design.widget.TextInputEditText
                 android:id="@+id/ar_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:maxLength="30"
                 android:maxLines="1"
                 android:hint="@string/email"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/ar_password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">

             <android.support.design.widget.TextInputEditText
                 android:id="@+id/ar_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:maxLength="30"
                 android:maxLines="1"
                 android:hint="@string/password"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/ar_confirm_password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp">

             <android.support.design.widget.TextInputEditText
                 android:id="@+id/ar_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:maxLength="30"
                 android:maxLines="1"
                 android:hint="@string/confirm_password"/>

         </android.support.design.widget.TextInputLayout>


     </LinearLayout>


 </ScrollView>

    <ProgressBar
        android:id="@+id/ar_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/ar_register_btn"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/ar_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/accent_clr_btn_selector"
        android:textColor="#FFF"
        android:textAppearance="@style/TextLarge"
        android:text="@string/register"/>



</RelativeLayout>
