<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_quantity"
        android:textColor="@color/colorPrimary"
        android:theme="@style/TextNormal" />

    <com.shawnlin.numberpicker.NumberPicker
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        app:np_dividerColor="@color/colorPrimary"
        app:np_textColor="@color/colorPrimary"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_textSize="12sp"
        app:np_selectedTextSize="14sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textAppearance="@style/TextLarge"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textAppearance="@style/TextLarge"
            android:textColor="@color/colorAccent"
            android:text="@string/done"/>

    </LinearLayout>

</LinearLayout>