<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/aod_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">


        <android.support.v7.widget.Toolbar
            android:id="@+id/aod_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/MenuStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_gravity="center"
                android:textColor="#FFF"
                android:text="@string/my_orders"
                android:theme="@style/TextExtraLarge"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/aod_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextLarge"
                android:text="@string/items"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextLarge"
                android:text="@string/quantity_"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/aod_ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_below="@id/aod_ll">

            <TextView
                android:id="@+id/aod_items_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                style="@style/TextNormal"
                tools:text="Allery\nNew Allergy" />

            <TextView
                android:id="@+id/aod_quantities_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                style="@style/TextNormal"
                tools:text="25\n45"/>

        </LinearLayout>

        <TextView
            android:id="@+id/aod_tax_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aod_ll2"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextLarge"
            android:text="@string/tax"
            />

        <TextView
            android:id="@+id/aod_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aod_ll2"
            android:layout_toEndOf="@id/aod_tax_label"
            android:layout_marginTop="16dp"
            style="@style/TextLarge"
            tools:text="123"
            />

        <TextView
            android:id="@+id/aod_amt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aod_tax_label"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextLarge"
            android:text="@string/amount"
            />

        <TextView
            android:id="@+id/aod_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aod_tax_label"
            android:layout_toEndOf="@id/aod_amt_label"
            android:layout_marginTop="8dp"
            style="@style/TextLarge"
            tools:text="456"
            />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>